# SoftCon

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: octopus.muscle  octopus.param  octopus.sampling  octopus_all.muscle  spline_octopus.muscle
learn/: CMakeLists.txt  DeepController.cpp  DeepController.h  LICENSE  mlp_policy.py  pposgd_simple.py  run.py  timechecker.py
render/: CMakeLists.txt  Camera.cpp  Camera.h  DrawFunctions.cpp  DrawFunctions.h  DrawPrimitives.cpp  DrawPrimitives.h  GLWindow.cpp  GLWindow.h  SimulationWindow.cpp  SimulationWindow.h  main.cpp
sim/: CMakeLists.txt  Environment.cpp  Environment.h  Muscle.cpp  Muscle.h  MuscleSegment.cpp  MuscleSegment.h  Normalizer.cpp  Normalizer.h  Octopus.cpp  Octopus.h
sim/fem/: CMakeLists.txt  World.cpp  World.h
sim/fem/Constraint/: AttachmentConstraint.cpp  AttachmentConstraint.h  Constraint.cpp  Constraint.h  ConstraintHeader.h  CorotateFEMConstraint.cpp  CorotateFEMConstraint.h  LinearMuscleConstraint.cpp  LinearMuscleConstraint.h  Tensor.cpp  Tensor.h  TriangleBendingConstraint.cpp  TriangleBendingConstraint.h  TriangleMuscleConstraint.cpp  TriangleMuscleConstraint.h  TriangleStrainConstraint.cpp  TriangleStrainConstraint.h
sim/fem/Mesh/: Mesh.h  MeshHeaders.h  OBJMesh.cpp  OBJMesh.h
